created asset pipeline

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,22 +3,30 @@ project(city_defence VERSION 1.0 LANGUAGES CXX)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
+add_subdirectory(external)
+
 find_package(SDL2 REQUIRED)
 find_package(SDL2_image REQUIRED)
 find_package(SDL2_ttf REQUIRED)
 
 set(SOURCES src/main.cpp)
 
-include_directories(
+include_directories(external/simpleini
     ${SDL2_INCLUDE_DIR}
     ${SDL2_IMAGE_INCLUDE_DIR}
-    ${SDL2_TTF_INCLUDE_DIRS}
-)
+    ${SDL2_TTF_INCLUDE_DIRS})
 
 add_executable(city_defence ${SOURCES})
-target_link_libraries(
-    city_defence
+target_link_libraries(city_defence
+    simpleini
     ${SDL2_LIBRARY}
     ${SDL2_IMAGE_LIBRARY}
-    ${SDL2_TTF_LIBRARIES}
-)
+    ${SDL2_TTF_LIBRARIES})
+
+add_custom_command(TARGET city_defence POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${CMAKE_SOURCE_DIR}/config $<TARGET_FILE_DIR:city_defence>)
+
+add_custom_command(TARGET city_defence POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${CMAKE_SOURCE_DIR}/assets $<TARGET_FILE_DIR:city_defence>/assets)
