--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.6 FATAL_ERROR)
 project(city_defence VERSION 1.0 LANGUAGES CXX)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Werror -std=c++11")
+
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 add_subdirectory(external)
@@ -9,7 +11,11 @@ find_package(SDL2 REQUIRED)
 find_package(SDL2_image REQUIRED)
 find_package(SDL2_ttf REQUIRED)
 
-set(SOURCES src/main.cpp)
+set(SOURCES src/main.cpp
+    src/config/config.h
+    src/config/config.cpp
+    src/config/ini_config.h
+    src/config/ini_config.cpp)
 
 include_directories(external/simpleini
     ${SDL2_INCLUDE_DIR}
@@ -23,10 +29,10 @@ target_link_libraries(city_defence
     ${SDL2_IMAGE_LIBRARY}
     ${SDL2_TTF_LIBRARIES})
 
-add_custom_command(TARGET city_defence POST_BUILD
+add_custom_command(TARGET city_defence PRE_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory
     ${CMAKE_SOURCE_DIR}/config $<TARGET_FILE_DIR:city_defence>)
 
-add_custom_command(TARGET city_defence POST_BUILD
+add_custom_command(TARGET city_defence PRE_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory
     ${CMAKE_SOURCE_DIR}/assets $<TARGET_FILE_DIR:city_defence>/assets)
