--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "external/simpleini"]
-	path = external/simpleini
-	url = https://github.com/brofield/simpleini.git
+[submodule "third_party/simpleini"]
+	path = third_party/simpleini
+	url = git@github.com:robhendriks/simpleini.git
