--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,13 @@ set(SOURCES src/main.cpp
     src/config/config.h
     src/config/config.cpp
     src/config/ini_config.h
-    src/config/ini_config.cpp)
+    src/config/ini_config.cpp
+    src/math/vec2.hpp
+    src/math/box2.hpp
+    src/game/tile.h
+    src/game/tile.cpp
+    src/game/world.h
+    src/game/world.cpp src/game/graphics/texture.cpp src/game/graphics/texture.h src/game/graphics/sprite.cpp src/game/graphics/sprite.h)
 
 include_directories(third_party/simpleini
     ${SDL2_INCLUDE_DIR}
