--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,11 @@ set(SOURCES src/main.cpp
     src/game/tile.h
     src/game/tile.cpp
     src/game/world.h
-    src/game/world.cpp src/game/graphics/texture.cpp src/game/graphics/texture.h src/game/graphics/sprite.cpp src/game/graphics/sprite.h)
+    src/game/world.cpp
+    src/game/graphics/texture.cpp
+    src/game/graphics/texture.h
+    src/game/graphics/sprite.cpp
+    src/game/graphics/sprite.h)
 
 include_directories(third_party/simpleini
     ${SDL2_INCLUDE_DIR}
