--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,18 +18,8 @@ set(SOURCES src/main.cpp
     src/config/ini_config.cpp
     src/math/vec2.hpp
     src/math/box2.hpp
-    src/game/tile.h
-    src/game/tile.cpp
-    src/game/world.h
-    src/game/world.cpp
-    src/game/graphics/texture.cpp
-    src/game/graphics/texture.h
-    src/game/graphics/sprite.cpp
-    src/game/graphics/sprite.h
     src/game/engine.cpp
-    src/game/engine.h
-    src/game/graphics/display.cpp
-    src/game/graphics/display.h)
+    src/game/engine.h src/game/window.cpp src/game/window.h src/game/window_config.h)
 
 include_directories(third_party/simpleini
     third_party/json/src
@@ -46,8 +36,4 @@ target_link_libraries(city_defence
 
 add_custom_command(TARGET city_defence PRE_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory
-    ${CMAKE_SOURCE_DIR}/config $<TARGET_FILE_DIR:city_defence>)
-
-add_custom_command(TARGET city_defence PRE_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_directory
-    ${CMAKE_SOURCE_DIR}/assets $<TARGET_FILE_DIR:city_defence>/assets)
+    ${CMAKE_SOURCE_DIR}/data $<TARGET_FILE_DIR:city_defence>/)
