texture framework is almost done just wondering how we are gonna handle resolutions and for some reason the engine stops with calling update at some point

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ set(SOURCES src/main.cpp
     src/gui/base_gui.cpp
     src/gui/base_gui.h
     src/gui/menu_gui.cpp
-    src/gui/menu_gui.h)
+    src/gui/menu_gui.h src/game/texture/texture_manager.cpp src/game/texture/texture_manager.h)
 
 include_directories(third_party/json/src
         ${SDL2_INCLUDE_DIR}
