--- a/data/config.json
+++ b/data/config.json
@@ -1,6 +1,10 @@
 {
+  "engine": {
+    "title": "City Defense"
+  },
   "window": {
     "width": 640,
-    "height": 480
+    "height": 480,
+    "background_color": "0xFF6495ED"
   }
 }
