--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ set(SOURCES src/main.cpp
     src/domain/buildings/base_placeable_object.cpp
     src/domain/buildings/base_placeable_object.h
     src/gui/views/main_menu.cpp
-    src/gui/views/main_menu.h src/engine/texture/texture_manager.cpp src/engine/texture/texture_manager.h src/engine/eventbus/eventbus.h src/engine/eventbus/subscriber.h src/engine/events/key_down.h src/engine/input/keycodes.h src/gui/controllers/menu_controller.cpp src/gui/controllers/menu_controller.h src/engine/events/mouse_button_down.h src/engine/events/window_cleared.cpp src/engine/events/window_cleared.h src/gui/router.cpp src/gui/router.h src/engine/input/mouse_buttons.h src/engine/events/mouse_button_up.h src/engine/engine_config.h src/config/config.h src/utils/string_utils.h)
+    src/gui/views/main_menu.h src/engine/texture/texture_manager.cpp src/engine/texture/texture_manager.h src/engine/eventbus/eventbus.h src/engine/eventbus/subscriber.h src/engine/events/key_down.h src/engine/input/keycodes.h src/gui/controllers/menu_controller.cpp src/gui/controllers/menu_controller.h src/engine/events/mouse_button_down.h src/engine/events/window_cleared.cpp src/engine/events/window_cleared.h src/gui/router.cpp src/gui/router.h src/engine/input/mouse_buttons.h src/engine/events/mouse_button_up.h src/engine/engine_config.h src/config/config.h src/utils/string_utils.h src/gui/views/main_map.cpp src/gui/views/main_map.h src/gui/controllers/main_map_controller.cpp src/gui/controllers/main_map_controller.h)
 
 include_directories(third_party/json/src
         third_party/di-cpp14/include
