--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,7 +74,30 @@ set(SOURCES src/main.cpp
     src/gui/views/base_view.h
     src/gui/controllers/base_controller.cpp
     src/gui/controllers/base_controller.h
-    src/services/registry/registry.h src/game.cpp src/game.h src/engine/audio/sound_manager.cpp src/engine/audio/sound_manager.h src/engine/audio/music_manager.cpp src/engine/audio/music_manager.h src/events/object_placed_on_field.cpp src/events/object_placed_on_field.h src/events/object_cannot_be_placed_on_field.cpp src/events/object_cannot_be_placed_on_field.h src/listeners/play_sound_when_object_is_placed_on_field.cpp src/listeners/play_sound_when_object_is_placed_on_field.h src/listeners/play_sound_when_object_cannot_be_placed_on_field.cpp src/listeners/play_sound_when_object_cannot_be_placed_on_field.h src/engine/audio/state.h src/engine/audio/sound_callback_wrapper.cpp src/engine/audio/sound_callback_wrapper.h src/domain/drawable_game_object.cpp src/domain/drawable_game_object.h)
+    src/services/registry/registry.h
+    src/game.cpp
+    src/game.h
+    src/engine/audio/sound_manager.cpp
+    src/engine/audio/sound_manager.h
+    src/engine/audio/music_manager.cpp
+    src/engine/audio/music_manager.h
+    src/events/object_placed_on_field.cpp
+    src/events/object_placed_on_field.h
+    src/events/object_cannot_be_placed_on_field.cpp
+    src/events/object_cannot_be_placed_on_field.h
+    src/listeners/play_sound_when_object_is_placed_on_field.cpp
+    src/listeners/play_sound_when_object_is_placed_on_field.h
+    src/listeners/play_sound_when_object_cannot_be_placed_on_field.cpp
+    src/listeners/play_sound_when_object_cannot_be_placed_on_field.h
+    src/engine/audio/state.h
+    src/engine/audio/sound_callback_wrapper.cpp
+    src/engine/audio/sound_callback_wrapper.h
+    src/domain/drawable_game_object.cpp
+    src/domain/drawable_game_object.h
+    src/gui/controllers/credits_controller.cpp
+    src/gui/controllers/credits_controller.h
+    src/gui/views/credits.cpp
+    src/gui/views/credits.h)
 
 include_directories(third_party/json/src
         third_party/di-cpp14/include
@@ -84,7 +107,7 @@ include_directories(third_party/json/src
         ${SDL2_TTF_INCLUDE_DIRS}
         ${SDL2_MIXER_INCLUDE_DIR})
 
-add_executable(city_defence ${SOURCES})
+add_executable(city_defence ${SOURCES} src/engine/graphics/font_manager.cpp src/engine/graphics/font_manager.h src/engine/graphics/moveable_box.cpp src/engine/graphics/moveable_box.h)
 add_library(city_defence_sources STATIC ${SOURCES})
 
 target_link_libraries(city_defence
