Pages and window debug state (for fullscreen crash)

--- a/data/config.json
+++ b/data/config.json
@@ -3,6 +3,7 @@
     "title": "City Defence"
   },
   "window": {
-    "background_color": "0xFF6495ED"
+    "background_color": "0xFF6495ED",
+    "debug": true
   }
 }
