--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,13 @@
 cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
 project(city_defence VERSION 1.0 LANGUAGES C CXX)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Werror -std=c++14")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++14")
+
+if (NOT APPLE)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
+elseif(APPLE)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
+endif()
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
@@ -47,8 +53,6 @@ set(SOURCES src/main.cpp
     src/gui/controllers/menu_controller.cpp
     src/gui/controllers/menu_controller.h
     src/engine/events/mouse_button_down.h
-    src/engine/events/window_cleared.cpp
-    src/engine/events/window_cleared.h
     src/engine/input/mouse_buttons.h
     src/engine/events/mouse_button_up.h
     src/engine/engine_config.h
@@ -81,9 +85,9 @@ set(SOURCES src/main.cpp
     src/domain/drawable/drawable_game_object.cpp
     src/domain/drawable/drawable_game_object.h
     src/domain/drawable/abstract_drawable_game_object.h
-        src/services/level_loader/base_level_loader.h
-        src/services/level_loader/json_level_loader.cpp
-        src/services/level_loader/json_level_loader.h
+    src/services/level_loader/base_level_loader.h
+    src/services/level_loader/json_level_loader.cpp
+    src/services/level_loader/json_level_loader.h
     src/gui/controllers/credits_controller.cpp
     src/gui/controllers/credits_controller.h
     src/gui/views/credits.cpp
@@ -112,17 +116,15 @@ set(SOURCES src/main.cpp
     src/domain/nations/nation.cpp
     src/domain/nations/nation.h
     src/domain/game_level/game_level.h
-        src/domain/map/objects/building.h
+    src/domain/map/objects/building.h
     src/domain/map/objects/dragable_field_object.h
-        src/domain/map/objects/road.h
-        src/domain/map/objects/building.cpp
+    src/domain/map/objects/road.h
+    src/domain/map/objects/building.cpp
     src/domain/map/objects/dragable_field_object.cpp
-        src/domain/map/objects/road.cpp
-        src/domain/map/field.h
-        src/domain/map/field.cpp
-        src/domain/map/objects/field_object.h
-        src/engine/events/display_changed.cpp
-    src/engine/events/display_changed.h
+    src/domain/map/objects/road.cpp
+    src/domain/map/field.h
+    src/domain/map/field.cpp
+    src/domain/map/objects/field_object.h
     src/engine/events/game_tick.cpp
     src/engine/events/game_tick.h
     src/domain/map/objects/field_object.cpp
@@ -133,26 +135,25 @@ set(SOURCES src/main.cpp
     src/services/wave/wavegenerator.cpp
     src/services/wave/wavegenerator.h
     src/services/wave/wave_management.cpp
-    src/services/wave/wave_management.h
-    )
+    src/services/wave/wave_management.h)
 
 include_directories(third_party/json/src
-        third_party/di-cpp14/include
-        third_party/type
-        ${SDL2_INCLUDE_DIR}
-        ${SDL2_IMAGE_INCLUDE_DIR}
-        ${SDL2_TTF_INCLUDE_DIRS}
-        ${SDL2_MIXER_INCLUDE_DIR})
+    third_party/di-cpp14/include
+    third_party/type
+    ${SDL2_INCLUDE_DIR}
+    ${SDL2_IMAGE_INCLUDE_DIR}
+    ${SDL2_TTF_INCLUDE_DIRS}
+    ${SDL2_MIXER_INCLUDE_DIR})
 
 add_executable(city_defence ${SOURCES})
 add_library(city_defence_sources STATIC ${SOURCES})
 
 target_link_libraries(city_defence
-        ${SDL2_LIBRARY}
-        ${SDL2_IMAGE_LIBRARY}
-        ${SDL2_TTF_LIBRARIES}
-        ${SDL2_MIXER_LIBRARY})
+    ${SDL2_LIBRARY}
+    ${SDL2_IMAGE_LIBRARY}
+    ${SDL2_TTF_LIBRARIES}
+    ${SDL2_MIXER_LIBRARY})
 
 add_custom_command(TARGET city_defence PRE_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_directory
-        ${CMAKE_SOURCE_DIR}/data $<TARGET_FILE_DIR:city_defence>/)
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${CMAKE_SOURCE_DIR}/data $<TARGET_FILE_DIR:city_defence>/)
