--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,7 +134,7 @@ set(SOURCES src/main.cpp
     src/services/wave/wavegenerator.h
     src/services/wave/wave_management.cpp
     src/services/wave/wave_management.h
-    src/engine/events/key_down.cpp)
+    src/engine/events/key_down.cpp src/gui/views/level_goals.cpp src/gui/views/level_goals.h src/gui/models/level_goals_model.h)
 
 include_directories(third_party/json/src
         third_party/di-cpp14/include
