--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,11 +134,12 @@ set(SOURCES src/main.cpp
     src/services/wave/wavegenerator.h
     src/services/wave/wave_management.cpp
     src/services/wave/wave_management.h
-    src/engine/events/key_down.cpp src/gui/views/level_goals.cpp src/gui/views/level_goals.h src/gui/models/level_goals_model.h)
+    src/engine/events/key_down.cpp src/gui/views/level_goals.cpp src/gui/views/level_goals.h src/gui/models/level_goals_model.h src/domain/game_level/game_stats_modifier.h)
 
 include_directories(third_party/json/src
         third_party/di-cpp14/include
         third_party/type
+        third_party/nanosvg
         ${SDL2_INCLUDE_DIR}
         ${SDL2_IMAGE_INCLUDE_DIR}
         ${SDL2_TTF_INCLUDE_DIRS}
