--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,7 +156,7 @@ include_directories(third_party/json/src
         ${SDL2_TTF_INCLUDE_DIRS}
         ${SDL2_MIXER_INCLUDE_DIR})
 
-add_executable(city_defence ${SOURCES})
+add_executable(city_defence ${SOURCES} src/domain/map/ai.cpp src/domain/map/ai.h)
 add_library(city_defence_sources STATIC ${SOURCES})
 
 target_link_libraries(city_defence
